css/style.css
html {
  font-family: Roboto, 'Open Sans', Verdana, sans-serif;
}

body {
  text-align: center;
}

canvas {
  margin-top: -50px;
}

button {
  font-size: 1em;
  background-color: #3B93D6;
  border: .10em solid #718EA4;
  box-shadow: 0 0 2px 496D89;
  margin: 0 1em 0 1em;
  color: white;
  height: 2.5em;
  width: 5em;
}

.wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.status {
  display: flex;
  flex-direction: row;
  align-content: space-around;
  align-items: center;
  justify-content: center;
}

.status-element {
  font-size: 1.25em;
  margin-right: 1em;
}

.space-before {
  margin-left: 1em;
}

#game-board {
  margin: 0 .5em 0 .5em;
}

.footer-bar {
}

/* Modal dialog attributes */

.modal {
  border-radius: 4px;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  background-color: #fff;
  z-index: 3; /* places the modal on top of everything */
  position: fixed;
  top: 25%;
  left: 0;
  right: 0;
  width: 500px;
  display: none;
}

.modal-overlay {
  width: 100%;
  height: 100%;
  z-index: 2; /* places the modalOverlay between the main page and the modal dialog */
  background-color: #000;
  opacity: 0.5;
  position: fixed;
  top: 0;
  left: 0;
  display: none;
  margin: 0;
  padding: 0;
}

.field {
  display: inline-block;
  vertical-align: bottom;
}

.modal .field {
    display: block;
    margin-bottom: 10px;
}

.modal input[type=text],
.modal input[type=password] {
    width: auto;
}

.modal h1,
[role=dialog] h1 {
    margin-top: 0;
}

